--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bank Interest Managemenet</title>
-</head>
-<body>
-    <h2>Interest for year 2021-22</h2>
-    <table>
-        <thead>
-            <tr>
-            <th>Account Holder</th>
-            <th>Balance</th>
-            <th>Balance after interest</th>
-            </tr>
-        </thead>
-        <tbody>
-           <tr>
-            <td>Aditya</td>
-            <input type="text" id="ip1">
-            <input type="text">
-           </tr>
-           <tr>
-            <td>Samuel</td>
-            <input type="text" id="ip2">
-            <input type="text">
-           </tr>
-           <tr>
-            <td>Vaishnavi</td>
-            <input type="text" id="ip3">
-            <input type="text">
-           </tr>
-           <tr>
-            <td>Chaitanya</td>
-            <input type="text" id="ip4">
-            <input type="text">
-           </tr>
-           <tr>
-            <td>Akash</td>
-            <input type="text" id="ip5">
-            <input type="text">
-           </tr>
-        </tbody>
-    </table>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="bank-balance-display">
+      <table>
+        <tr>
+          <th>Account Holder Name</th>
+          <th>Current Account Balance</th>
+          <th>Balance After Interest</th>
+        </tr>
+        <tr>
+          <td>Tarun</td>
+          <td><input type="number" id="bank-balance-1" /></td>
+          <td><input type="number" disabled /></td>
+        </tr>
+        <tr>
+          <td>Aditya</td>
+          <td><input type="number" id="bank-balance-2" /></td>
+          <td><input type="number" disabled /></td>
+        </tr>
+        <tr>
+          <td>Rajesh</td>
+          <td><input type="number" id="bank-balance-3" /></td>
+          <td><input type="number" disabled /></td>
+        </tr>
+        <tr>
+          <td>Shreyash</td>
+          <td><input type="number" id="bank-balance-4" /></td>
+          <td><input type="number" disabled /></td>
+        </tr>
+        <tr>
+          <td>Shobha</td>
+          <td><input type="number" id="bank-balance-5" /></td>
+          <td><input type="number" disabled /></td>
+        </tr>
+      </table>
+      <button onclick="calculateInterest()">Calculate Final Amount</button>
+    </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
