used getElementsByClass instead of getElementById to improve solution. First working prototype is completed.

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         </tr>
         <tr>
           <td>Tarun</td>
-          <td><input type="number" id="bank-balance-1" /></td>
-          <td><input type="number" disabled /></td>
+          <td><input type="number" class="input-balance" /></td>
+          <td><input type="number" class="display-updated-balance" disabled /></td>
         </tr>
         <tr>
           <td>Aditya</td>
-          <td><input type="number" id="bank-balance-2" /></td>
-          <td><input type="number" disabled /></td>
+          <td><input type="number" class="input-balance" /></td>
+          <td><input type="number" class="display-updated-balance" disabled /></td>
         </tr>
         <tr>
           <td>Rajesh</td>
-          <td><input type="number" id="bank-balance-3" /></td>
-          <td><input type="number" disabled /></td>
+          <td><input type="number" class="input-balance" /></td>
+          <td><input type="number" class="display-updated-balance" disabled /></td>
         </tr>
         <tr>
           <td>Shreyash</td>
-          <td><input type="number" id="bank-balance-4" /></td>
-          <td><input type="number" disabled /></td>
+          <td><input type="number" class="input-balance" /></td>
+          <td><input type="number" class="display-updated-balance" disabled /></td>
         </tr>
         <tr>
           <td>Shobha</td>
-          <td><input type="number" id="bank-balance-5" /></td>
-          <td><input type="number" disabled /></td>
+          <td><input type="number" class="input-balance" /></td>
+          <td><input type="number" class="display-updated-balance" disabled /></td>
         </tr>
       </table>
       <button onclick="calculateInterest()">Calculate Final Amount</button>
